--- a/recuitmentAppFront/src/app/app.component.html
+++ b/recuitmentAppFront/src/app/app.component.html
@@ -30,7 +30,7 @@
        <li class="nav-item">
          <a href="/user" class="nav-link" *ngIf="showUser" routerLink="user">User</a>
        </li>
-       <li class="nav-item" *ngIf="showUser">
+       <li class="nav-item" >
         <a href="/postuler" class="nav-link" routerLink="postuler">Postule </a>
       </li>
        
